<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>net.hep.ami</groupId>
	<artifactId>AMITaskServer</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<packaging>jar</packaging>

	<name>AMITaskServer</name>
	<description></description>
	<url>http://www.cern.ch/ami/</url>

	<licenses>
		<license>
			<name>CeCILL, Version 2.1</name>
			<url>http://www.cecill.info/licences/Licence_CeCILL_V2.1-en.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Jerome Odier</name>
			<email>jerome.odier@lpsc.in2p3.fr</email>
		</developer>
	</developers>

	<properties>
		<amimini.version>0.0.1-SNAPSHOT</amimini.version>

		<mysql.version>6.0.5</mysql.version>
		<postgresql.version>9.4.1212</postgresql.version>
		<sqlite.version>3.15.1</sqlite.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<!--***************************************************************-->

		<dependency>
			<groupId>net.hep.ami</groupId>
			<artifactId>AMIMini</artifactId>
			<version>${amimini.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>

		<!--***************************************************************-->

		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlite.version}</version>
		</dependency>

		<!--***************************************************************-->
	</dependencies>

	<build>

		<pluginManagement>
			<plugins>

				<!--*******************************************************-->

				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.2</version>
				</plugin>

				<!--*******************************************************-->

			</plugins>
		</pluginManagement>

		<plugins>
			<!--***********************************************************-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<descriptors>
						<descriptor>taskserver.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!--***********************************************************-->
		</plugins>

	</build>

</project>
